[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games"
classifiers = [
    "Topic :: Games/Entertainment",
    "Environment :: Console",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English"
]
authors = ["qffo <075viktor@mail.ru>"]
repository = "https://github.com/qffo/python-project-49"
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"